Fix bug with horizontal scrollbar
Bootstrap class "container-fluid" seems to make width larger then 100%.
Fixed by changing row margin to zero.

--- a/www/resources/sass/_extra.scss
+++ b/www/resources/sass/_extra.scss
@@ -51,6 +51,10 @@ form {
     margin: 0;
 }
 
+// with container-fluid row margin causes horizontal scroll
+.row {
+    margin: 0;
+}
 // Headings
 // No use of bem, when we want to override every instance of them
 
